--- a/vue_simple.html
+++ b/vue_simple.html
@@ -6,13 +6,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://unpkg.com/vue@3"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <meta charset="utf-8">
     <title>Vue simple</title>
   </head>
   <body>
     <style>
+            #map, #main {
+      height: 100vh;
+      width: 100%;
+    }
+
+    .hidden {
+      display: none;
+    }
+  
     </style>
     <div id="main">
+        <div>
         <h1>Parking Nantes</h1>
         <form>
             <div class="input-group mb-3 ms-5" style="width: 50%; margin: auto; margin-bottom: 20px; margin-top: 20px; ">
@@ -21,6 +34,7 @@
             </div>
 
         </form>
+        <div class="container">
         <table class="table">
             <thead>
                 <tr>
@@ -35,12 +49,24 @@
                 </tr>
             </thead>
             </table>
+        </div>
     </div>
+<div id="map" class="map hidden">
+</div>
+</div>
+    
     <script>
+            let map = L.map('map').setView([47.2136949, -1.5393237], 13);
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', ).addTo(map);
+            //ajouter un marker pour chaque parking
+            //pour chaque parking, ajouter un marker
+            
+
 			Vue.createApp({
                 data() {
                     return {
                         parking: [],
+                        menu: 'map',
                         search: "",
                         apiURL: "https://data.nantesmetropole.fr/api/explore/v2.1/catalog/datasets/244400404_parkings-publics-nantes-disponibilites/records?limit=99",
                     };
@@ -58,6 +84,12 @@
                             });
                             result.forEach(element => {
                                 element.url = element.location ? this.getUrlMap(element.location) : "";
+                                //ajouter un marker pour chaque parking
+                                if (element.location) {
+                                L.marker([element.location.lat, element.location.lon]).addTo(map)
+                                    .bindPopup(element.grp_nom + " : " + element.grp_disponible + " places disponibles")
+                                    .openPopup();
+                                }
                             });
                             console.log(result);
                             this.parking = result;            
